# rustlang-work

./: .gitignore  remove_remotes.sh  rust-command-scratchpad.txt
loadDBForRust/: README.md  insert_balance_forecast.py  main.py  pyproject.toml
loadDBForRust/sql/: BALANCE_FORECAST_MODEL.sql
myproject/: Cargo.toml
myproject/src/: main.rs
oracle_kinetica_migration_app/: Cargo.toml  Config.example  projectscratchpad.txt  query.sql
oracle_kinetica_migration_app/src/: main.rs
oracle_query_app/: Cargo.toml  project.scratchpad.txt
oracle_query_app/src/: main.rs
rustexamples/: Cargo.toml
rustexamples/examples/: ex01_guessgaem.rs
var2project/: Cargo.toml
var2project/src/: main.rs
varborrowing/: Cargo.toml
varborrowing/src/: main.rs
varcloneproject/: Cargo.toml
varcloneproject/src/: main.rs
varproject/: Cargo.toml
varproject/src/: main.rs
