[package]
name = "oracle_kinetica_migration_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-channel = "2.5.0"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.10"
log = "0.4.29"
oracle-rs = "0.1.7"
reqwest = {version="0.13.3", default-features = false, features = ["json", "rustls-tls"] }
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version="1.52.3", features = ["full"] }
toml = "1.1.2"
